Fix contrast of some admin texts

--- a/decidim-admin/app/packs/stylesheets/decidim/admin/_moderations.scss
+++ b/decidim-admin/app/packs/stylesheets/decidim/admin/_moderations.scss
@@ -22,7 +22,7 @@
   }
 
   dd {
-    @apply p-4 bg-gray mb-1;
+    @apply p-4 bg-gray-3 mb-1;
   }
 
   .reportable-authors {
