--- a/decidim-admin/app/packs/stylesheets/decidim/admin/_show_email.scss
+++ b/decidim-admin/app/packs/stylesheets/decidim/admin/_show_email.scss
@@ -6,7 +6,7 @@
   }
 
   > div {
-    @apply bg-gray mb-2 p-2;
+    @apply bg-gray-3 mb-2 p-2;
   }
 
   #user_email + p {
